[package]
name = "pgdatum"
version = "0.1.0"
authors = ["Diego Lima <lima.ds@outlook.com>"]
edition = "2018"
description = "C ABI-compabible types to write PostgreSQL extensions"

[dependencies]
sqlparser = "0.5.1"
toml = "0.5.6"
structopt = "0.3.19"

[build-dependencies]
cc = "1.0"
sqlparser = "0.5.1"
toml = "0.5.6"
